Extract general layout

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,18 @@
-<img src='/assets/inventures.png' alt='Inventures logo'/>
+<header>
+  <img src='/assets/inventures.png' alt='Inventures logo'/>
 
-<ul>
-  <li>
-    <a href='/'>About us</a>
-  </li>
-  <li>
-    <a href='/team-board'>Team</a>
-  </li>
-  <li>
-    <a href='/venture-capital-funds'>Funds</a>
-  </li>
-  <li>
-    <a href='/call-for-investors'>For investors</a>
-  </li>
-</ul>
+  <ul>
+    <li>
+      <a href='/'>About us</a>
+    </li>
+    <li>
+      <a href='/team-board'>Team</a>
+    </li>
+    <li>
+      <a href='/venture-capital-funds'>Funds</a>
+    </li>
+    <li>
+      <a href='/call-for-investors'>For investors</a>
+    </li>
+  </ul>
+</header>
