Add design homepage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,35 @@
-<footer>
-  <ul>
-    <li>
+<footer class='col col-12 bg-athens-gray center h5 mt3 py2'>
+  <ul class='list-reset mb1'>
+    <li class='inline-block px2 border-right'>
       <a href='/'>About us</a>
     </li>
-    <li>
+    <li class='inline-block px2 border-right'>
       <a href='/team-board'>Team</a>
     </li>
-    <li>
+    <li class='inline-block px2 border-right'>
       <a href='/venture-capital-funds'>Funds</a>
     </li>
-    <li>
+    <li class='inline-block px2'>
       <a href='/call-for-investors'>For investors</a>
     </li>
   </ul>
 
-  <ul>
-    <li>Impact Venture Capital Funds</li>
-    <li>Place Sainte-Gudule 5, 1000 Brussels, Belgium</li>
-    <li>
-      <a href='tel:+3223184712'>+32 2 318 47 12</a>
-    </li>
-    <li>BE 0836.671.025</li>
-  </ul>
+  <address class='mb1'>
+    Inventures SA
+    &mdash;
+    Place Sainte-Gudule 5, 1000 Brussels, Belgium
+    &mdash;
+    <a href='tel:+3223184712'>+32 2 318 47 12</a>
+    &mdash;
+    BE 0836.671.025
+  </address>
 
-  <ul>
-    <li>
+  <ul class='list-reset'>
+    <li class='inline-block px2 border-right'>
+      <a href='/venture-capital-funds'>Funds</a>
       <a href='/disclaimer'>Legal disclaimer</a>
     </li>
-    <li>
+    <li class='inline-block px2'>
       <a href='/cookie-policy'>Cookie policy</a>
     </li>
   </ul>
