--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,32 @@
 <head>
-    <meta charset='utf-8'>
-    <title>{{ page.title }} | {{ site.title }} | {{ site.tagline }}</title>
-    <meta property='og:title' content='{{ site.title }}' />
-    <meta property='og:type' content='website' />
-    <meta property='og:url' content='{{ site.url }}' />
-    <meta property='og:image' content='{{ site.url }}/assets/inventures.png' />
-    <meta property='og:site_name' content='{{ site.title }}' />
-    <meta property='og:description' content='{{ site.description }}' />
-    <meta name='viewport' content='width=device-width' />
+  <meta charset='utf-8'/>
+  <title>{{ page.title }} | {{ site.title }} | {{ site.tagline }}</title>
+  <meta property='og:locale' content='en'/>
+  <meta property='og:title' content='{{ page.title }} | {{ site.title }} | {{ site.tagline }}'/>
+  <meta property='og:type' content='website'/>
+  <meta property='og:url' content='{{ site.url }}'/>
+  <meta property='og:image' content='{{ site.url }}/assets/inventures.svg'/>
+  <meta property='og:site_name' content='{{ site.title }} | {{ site.tagline }}'/>
+  <meta property='og:description' content='{{ site.description }}'/>
+  <meta name='twitter:card' content='summary'/>
+  <meta name='twitter:title' content='{{ page.title }} | {{ site.title }} | {{ site.tagline }}'/>
+  <meta name='twitter:site' content='{{ site.twitter }}'/>
+  <meta name='twitter:creator' content='{{ site.twitter }}'/>
+  <meta name='viewport' content='width=device-width'/>
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
+  <link rel='apple-touch-icon-precomposed' href='/assets/apple-touch-icon.png'/>
+  <link rel='stylesheet' href='//d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
+  <style>
+    .bondi-blue { color: #00ACC1 }
+    .bg-bondi-blue { background-color: #00ACC1 }
+    .athens-gray { color: #F7F9FB }
+    .bg-athens-gray { background-color: #F7F9FB }
+    .dove-gray { color: #555 }
+    .bg-dove-gray { background-color: #555 }
+    .mine-shaft { color: #222 }
+    .bg-mine-shaft { background-color: #222 }
+    .sunset-orange { color: #FF4D40 }
+    .bg-sunset-orange { background-color: #FF4D40 }
+    a { color: #00ACC1 }
+  </style>
 </head>
