--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,18 +1,16 @@
-<header>
-  <img src='/assets/inventures.png' alt='Inventures logo'/>
+<div class='container clearfix'>
+  <header class='col col-12 mt3 mb2'>
+    <div class='col sm-col-4'>
+      <img src='/assets/inventures.svg' width='80%' alt='Inventures logo'/>
+    </div>
 
-  <ul>
-    <li>
-      <a href='/'>About us</a>
-    </li>
-    <li>
-      <a href='/team-board'>Team</a>
-    </li>
-    <li>
-      <a href='/venture-capital-funds'>Funds</a>
-    </li>
-    <li>
-      <a href='/call-for-investors'>For investors</a>
-    </li>
-  </ul>
-</header>
+    <div class='col sm-col-8'>
+      <div class='sm-flex nowrap'>
+        <div class='flex-auto'><a class='btn block' href='/'>About us</a></div>
+        <div class='flex-auto'><a class='btn block' href='/team-board'>Team</a></div>
+        <div class='flex-auto'><a class='btn block' href='/venture-capital-funds'>Funds</a></div>
+        <div class='flex-auto'><a class='btn block' href='/call-for-investors'>For investors</a></div>
+      </div>
+    </div>
+  </header>
+</div>
