Design legal disclaimer & cookie policy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class='col col-12 bg-athens-gray center h5 mt3 py2'>
+<footer class='col col-12 bg-athens-gray dove-gray center h5 mt3 py2'>
   <ul class='list-reset mb1'>
     <li class='inline-block px2 border-right'>
       <a href='/'>About us</a>
@@ -26,7 +26,6 @@
 
   <ul class='list-reset'>
     <li class='inline-block px2 border-right'>
-      <a href='/venture-capital-funds'>Funds</a>
       <a href='/disclaimer'>Legal disclaimer</a>
     </li>
     <li class='inline-block px2'>
