--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,6 @@
     .sunset-orange { color: #FF4D40 }
     .bg-sunset-orange { background-color: #FF4D40 }
     a { color: #00ACC1 }
+    footer a { color: #555 }
   </style>
 </head>
