Add design Board & Team

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
     &mdash;
     Place Sainte-Gudule 5, 1000 Brussels, Belgium
     &mdash;
-    <a href='tel:+3223184712'>+32 2 318 47 12</a>
+    <a href='tel:{{ site.phone }}'>{{ site.phone }}</a>
     &mdash;
     BE 0836.671.025
   </address>
