--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,18 +16,5 @@
   <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
   <link rel='apple-touch-icon-precomposed' href='/assets/apple-touch-icon.png'/>
   <link rel='stylesheet' href='//d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
-  <style>
-    .bondi-blue { color: #00ACC1 }
-    .bg-bondi-blue { background-color: #00ACC1 }
-    .athens-gray { color: #F7F9FB }
-    .bg-athens-gray { background-color: #F7F9FB }
-    .dove-gray { color: #555 }
-    .bg-dove-gray { background-color: #555 }
-    .mine-shaft { color: #222 }
-    .bg-mine-shaft { background-color: #222 }
-    .sunset-orange { color: #FF4D40 }
-    .bg-sunset-orange { background-color: #FF4D40 }
-    a { color: #00ACC1 }
-    footer a { color: #555 }
-  </style>
+  {% include styles.html %}
 </head>
