--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,6 +1,4 @@
 <style>
-  .bondi-blue { color: #00ACC1 }
-  .bg-bondi-blue { background-color: #00ACC1 }
   .athens-gray { color: #F7F9FB }
   .bg-athens-gray { background-color: #F7F9FB }
   .dove-gray { color: #555 }
@@ -9,6 +7,6 @@
   .bg-mine-shaft { background-color: #222 }
   .sunset-orange { color: #FF4D40 }
   .bg-sunset-orange { background-color: #FF4D40 }
-  a { color: #00ACC1 }
+  a { color: #3EBDF7 }
   footer a { color: #555 }
 </style>
