Link main logo to homepage

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,9 @@
 <div class='container clearfix'>
   <header class='col col-12 mt3 mb2'>
     <div class='col sm-col-4'>
-      <img src='/assets/inventures.svg' width='80%' alt='Inventures logo'/>
+      <a href='/' title='Home'>
+        <img src='/assets/inventures.svg' width='80%' alt='Inventures logo'/>
+      </a>
     </div>
 
     <div class='col sm-col-8'>
