Add Call For Projects

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,11 @@
     <li class='inline-block px2 border-right'>
       <a href='/venture-capital-funds'>Funds</a>
     </li>
-    <li class='inline-block px2'>
+    <li class='inline-block px2 border-right'>
       <a href='/call-for-investors'>For investors</a>
+    </li>
+    <li class='inline-block px2'>
+      <a href='/call-for-projects'>Call For Projects</a>
     </li>
   </ul>
 
