Add Roboto and Montserrat fonts

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -9,4 +9,7 @@
   .bg-sunset-orange { background-color: #FF4D40 }
   a { color: #3EBDF7 }
   footer a { color: #555 }
+  * { font-family: 'Roboto', sans-serif; font-weight: 300; }
+  h1, h2, h3, h4, h5, h6 { font-family: 'Montserrat', sans-serif }
+  strong { font-weight: 600 }
 </style>
