--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,8 @@
   <meta name='viewport' content='width=device-width'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='apple-touch-icon-precomposed' href='/assets/apple-touch-icon.png'/>
-  <link rel='stylesheet' href='//d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
+  <link rel='stylesheet' href='https://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
+  <link rel='stylesheet' media='screen' href='https://fonts.googleapis.com/css?family=Montserrat|Roboto:300,600'/>
   <link rel='canonical' href=' {{ site.url }}{{ page.url }}'/>
   {% include styles.html %}
 </head>
