Remove Cookie Policy
No longer need it since we no longer store any cookies! :tadaa:

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,12 +27,5 @@
     BE 0836.671.025
   </address>
 
-  <ul class='list-reset'>
-    <li class='inline-block px2 border-right'>
-      <a href='/disclaimer'>Legal disclaimer</a>
-    </li>
-    <li class='inline-block px2'>
-      <a href='/cookie-policy'>Cookie policy</a>
-    </li>
-  </ul>
+  <p><a href='/disclaimer'>Legal disclaimer</a></p>
 </footer>
