Add Apple web app title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,9 @@
   <meta name='twitter:site' content='{{ site.twitter }}'/>
   <meta name='twitter:creator' content='{{ site.twitter }}'/>
   <meta name='viewport' content='width=device-width'/>
+  <meta name='apple-mobile-web-app-title' content='{{ site.title }}'/>
+  <link rel='apple-touch-icon' href='/assets/apple-touch-icon.png'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
-  <link rel='apple-touch-icon-precomposed' href='/assets/apple-touch-icon.png'/>
   <link rel='stylesheet' href='https://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
   <link rel='stylesheet' media='screen' href='https://fonts.googleapis.com/css?family=Montserrat|Roboto:300,600'/>
   <link rel='canonical' href=' {{ site.url }}{{ page.url }}'/>
