--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   <meta name='viewport' content='width=device-width'/>
   <meta name='apple-mobile-web-app-title' content='{{ site.title }}'/>
   <meta name='google-site-verification' content='kig6TkN0LzrjItqE1iHDLst6QBjICS4uVYzM3oAm-Qw'/>
+  <link rel='alternate' href='{{ site.url }}' hreflang='en'/>
   <link rel='apple-touch-icon' href='/favicon.png'/>
   <link rel='shortcut icon' href='/favicon.png' type='image/x-icon'/>
   <link rel='stylesheet' href='https://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
