--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
   <meta name='twitter:title' content='{{ page.title }} | {{ site.title }} | {{ site.tagline }}'/>
   <meta name='twitter:site' content='{{ site.twitter }}'/>
   <meta name='twitter:creator' content='{{ site.twitter }}'/>
+  <meta name='description' content='{{ page.description }}'/>
   <meta name='viewport' content='width=device-width'/>
   <meta name='apple-mobile-web-app-title' content='{{ site.title }}'/>
   <meta name='google-site-verification' content='kig6TkN0LzrjItqE1iHDLst6QBjICS4uVYzM3oAm-Qw'/>
