Add tailing slashes to internal URLs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta property='og:locale' content='en'/>
   <meta property='og:title' content='{{ page.title }} | {{ site.title }} | {{ site.tagline }}'/>
   <meta property='og:type' content='website'/>
-  <meta property='og:url' content='{{ site.url }}'/>
+  <meta property='og:url' content='{{ site.url }}/'/>
   <meta property='og:image' content='{{ site.url }}/assets/inventures.svg'/>
   <meta property='og:site_name' content='{{ site.title }} | {{ site.tagline }}'/>
   <meta property='og:description' content='{{ site.description }}'/>
@@ -16,8 +16,8 @@
   <meta name='viewport' content='width=device-width'/>
   <meta name='apple-mobile-web-app-title' content='{{ site.title }}'/>
   <meta name='google-site-verification' content='kig6TkN0LzrjItqE1iHDLst6QBjICS4uVYzM3oAm-Qw'/>
-  <link rel='alternate' href='{{ site.url }}{{ page.url }}' hreflang='en'/>
-  <link rel='canonical' href='{{ site.url }}{{ page.url }}'/>
+  <link rel='alternate' href='{{ site.url }}{{ page.url }}/' hreflang='en'/>
+  <link rel='canonical' href='{{ site.url }}{{ page.url }}/'/>
   <link rel='apple-touch-icon' href='/favicon.png'/>
   <link rel='shortcut icon' href='/favicon.png' type='image/x-icon'/>
   <link rel='stylesheet' href='https://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
