--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,16 +4,16 @@
       <a href='/'>About us</a>
     </li>
     <li class='inline-block px2 border-right'>
-      <a href='/team-board'>Team</a>
+      <a href='/team-board/'>Team</a>
     </li>
     <li class='inline-block px2 border-right'>
-      <a href='/venture-capital-funds'>Funds</a>
+      <a href='/venture-capital-funds/'>Funds</a>
     </li>
     <li class='inline-block px2 border-right'>
-      <a href='/call-for-investors'>For investors</a>
+      <a href='/call-for-investors/'>For investors</a>
     </li>
     <li class='inline-block px2'>
-      <a href='/call-for-projects'>Call For Projects</a>
+      <a href='/call-for-projects/'>Call For Projects</a>
     </li>
   </ul>
 
@@ -27,5 +27,5 @@
     BE 0836.671.025
   </address>
 
-  <p><a href='/disclaimer'>Legal disclaimer</a></p>
+  <p><a href='/disclaimer/'>Legal disclaimer</a></p>
 </footer>
