--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,10 +9,10 @@
     <div class='col sm-col-8'>
       <div class='sm-flex nowrap'>
         <div class='flex-auto'><a class='btn block' href='/'>About us</a></div>
-        <div class='flex-auto'><a class='btn block' href='/team-board'>Team</a></div>
-        <div class='flex-auto'><a class='btn block' href='/venture-capital-funds'>Funds</a></div>
-        <div class='flex-auto'><a class='btn block' href='/call-for-investors'>For investors</a></div>
-        <div class='flex-auto'><a class='btn block' href='/call-for-projects'>Call For Projects</a></div>
+        <div class='flex-auto'><a class='btn block' href='/team-board/'>Team</a></div>
+        <div class='flex-auto'><a class='btn block' href='/venture-capital-funds/'>Funds</a></div>
+        <div class='flex-auto'><a class='btn block' href='/call-for-investors/'>For investors</a></div>
+        <div class='flex-auto'><a class='btn block' href='/call-for-projects/'>Call For Projects</a></div>
       </div>
     </div>
   </header>
