Rename 'Call for Investors' to 'Get Funded'

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,10 @@
       <a href='/venture-capital-funds/'>Funds</a>
     </li>
     <li class='inline-block px2 border-right'>
-      <a href='/call-for-investors/'>For investors</a>
+      <a href='/call-for-investors/'>For Investors</a>
     </li>
     <li class='inline-block px2'>
-      <a href='/call-for-projects/'>Call For Projects</a>
+      <a href='/get-funded/'>Get Funded</a>
     </li>
   </ul>
 
