Rename 'Call for Investors' to 'Invest'

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <a href='/venture-capital-funds/'>Funds</a>
     </li>
     <li class='inline-block px2 border-right'>
-      <a href='/call-for-investors/'>For Investors</a>
+      <a href='/invest/'>Invest</a>
     </li>
     <li class='inline-block px2'>
       <a href='/get-funded/'>Get Funded</a>
