Add Inventures logo to organisation microdata

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
   </ul>
 
   <address class='mb1' id='organization' itemscope itemtype='http://schema.org/FinancialService'>
+    <meta itemprop='image logo' content='{{ site.url }}/assets/inventures.svg'/>
     <a href='{{ site.url }}' itemprop='url'>
       <span itemprop='name'>Inventures SA</span>
     </a>
