--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <meta name='viewport' content='width=device-width'/>
   <meta name='apple-mobile-web-app-title' content='{{ site.title }}'/>
   <meta name='google-site-verification' content='kig6TkN0LzrjItqE1iHDLst6QBjICS4uVYzM3oAm-Qw'/>
+  <link rel='dns-prefetch' href='https://www.mymicroinvest.com'>
   <link rel='alternate' href='{{ site.url }}{{ page.url }}' hreflang='en'/>
   <link rel='canonical' href='{{ site.url }}{{ page.url }}'/>
   <link rel='apple-touch-icon' href='/favicon.png'/>
