--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <link rel='canonical' href='{{ site.url }}{{ page.url }}'/>
   <link rel='apple-touch-icon' href='/favicon.png'/>
   <link rel='shortcut icon' href='/favicon.png' type='image/x-icon'/>
-  <link rel='stylesheet' href='https://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css'/>
+  <link rel='stylesheet' href='https://unpkg.com/basscss@7.0.4/css/basscss.min.css'/>
   <link rel='stylesheet' media='screen' href='https://fonts.googleapis.com/css?family=Montserrat|Roboto:300,600'/>
   {% include styles.html %}
 </head>
