--- a/_includes/key-figures.html
+++ b/_includes/key-figures.html
@@ -1,5 +1,5 @@
 <div class='bg-athens-gray px2 py1 mt3'>
-  <h3>Key figures</h3>
+  <h3>Inventures I: key figures</h3>
 
   <p>Since 1 July 2012:</p>
 
@@ -10,5 +10,5 @@
     <li><strong>15</strong> Companies selected for investment</li>
   </ul>
 
-  <p class='italic h5'>Latest update: April 2017</p>
+  <p class='italic h5'>Latest update: September 2017</p>
 </div>
