Add jobs page with Office Manager offer

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,7 @@
         <div class='flex-auto'><a class='btn block' href='/venture-capital-funds/'>Funds</a></div>
         <div class='flex-auto'><a class='btn block' href='/invest/'>Invest</a></div>
         <div class='flex-auto'><a class='btn block' href='/get-funded/'>Get Funded</a></div>
+        <div class='flex-auto'><a class='btn block' href='/jobs/'>Jobs</a></div>
       </div>
     </div>
   </header>
