Split Inventures and MyMicroInvest (#1)

--- a/_includes/key-figures.html
+++ b/_includes/key-figures.html
@@ -1,5 +1,5 @@
 <div class='bg-athens-gray px2 py1 mt3'>
-  <h3>Key figures</h3>
+  <h3>Inventures I: key figures</h3>
 
   <p>Since 1 July 2012:</p>
 
