Capitalize i for MyMicroInvest

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 <div class="container mt2 center">
   <div class="bg-athens-gray" style="padding: 10px">
-    More info regarding our company split from MyMicroinvest can be found
+    More info regarding our company split from MyMicroInvest can be found
     <a href="/statements/split">here.</a>
   </div>
 </div>
