Trailing slash in link prevents from 301

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <div class="bg-athens-gray mt2 center" style="padding: 10px">
   More info regarding our company split from MyMicroInvest can be found
-  <a href="/statements/split">here.</a>
+  <a href="/statements/split/">here.</a>
 </div>
