--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <div class="bg-athens-gray mt2 center" style="padding: 10px">
-  More info regarding our company split from MyMicroInvest can be found
-  <a href="/statements/split/">here.</a>
+  More info regarding the creation of Inventures Investment Partners, 
+  <a href="/statements/split/">read our press release.</a>
 </div>
